* 2014-02-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 31106: Parse allowed units for bandwidth parameters as described in property file

* 2014-02-11 - tobias.friedrich@open-xchange.com

 - Fix for bug 30966: Don't validate e-mail addresses of distribution list members when loading from the database

* 2014-02-10 - thorben.betten@open-xchange.com

 - Fix for bug 31039: Perform a move to trash through a RENAME command on associated IMAP folder

* 2014-02-07 - thorben.betten@open-xchange.com

 - Fix for bug 31021: Avoid needless examinations of all file stores to find a suitable one on context creation attempt

* 2014-02-06 - thorben.betten@open-xchange.com

 - Fix for bug 31010: More robust writing of JSON data BLOB to database

* 2014-02-06 - dennis.sieben@open-xchange.com

 - Fix for bug 31003: Empty JSON arrays handed over to this extension now result in an exception

* 2014-02-05 - dennis.sieben@open-xchange.com

 - Fix for bug 30984: registeredServiceImplementations counter must be increased even if the service implementation doesn't require other services

* 2014-02-05 - thorben.betten@open-xchange.com

 - Fix for bug 30977: Only keep MDC map for threads created by Open-Xchange application

* 2014-02-04 - marcus.klein@open-xchange.com

 - Fix for bug 30255: Closing database connections if database pool does not control them anymore.

* 2014-02-04 - dennis.sieben@open-xchange.com

 - SCR1860: added a new mail filter action command for pgp_encrypt extension

* 2014-01-30 - thorben.betten@open-xchange.com

 - Fix for bug 30895: Do not stick to have "image/*" Content-Type, but accept default Content-Type "application/octet-stream", too

* 2014-01-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 30852: Check permissions of all subfolders recursively prior accepting client deletion 

* 2014-01-29 - tobias.friedrich@open-xchange.com
